Correct ne joci peter

--- a/feature_learning_nlp/feature_learning_nlp.html
+++ b/feature_learning_nlp/feature_learning_nlp.html
@@ -885,8 +885,8 @@ hljs.initHighlightingOnLoad();
 <h3>Geometry of meaning</h3>
 <div class="slideContent" >
 <ul>
-<li>&ldquo;A si tud not padu?&rdquo;</li>
-<li>&ldquo;Ali si tudi noter padel?&rdquo;</li>
+<li>&ldquo;A si ti tud not padu?&rdquo;</li>
+<li>&ldquo;Ali si ti tudi noter padel?&rdquo;</li>
 </ul>
 
 <p>Given an ordered set \( X = \{x_0, \ldots, x_n\} \),</p>
@@ -932,8 +932,8 @@ hljs.initHighlightingOnLoad();
 <h3>Geometry of meaning</h3>
 <div class="slideContent" >
 <ul>
-<li>&ldquo;A si tud not padu?&rdquo;</li>
-<li>&ldquo;Ali si tudi noter padel?&rdquo;</li>
+<li>&ldquo;A si ti tud not padu?&rdquo;</li>
+<li>&ldquo;Ali si ti tudi noter padel?&rdquo;</li>
 </ul>
 
 <p>Example: \( X = \{\mathrm{a}, \mathrm{ali}, \mathrm{si}\} \mapsto \{0,1,2\} \)</p>
