--- a/feature_learning_nlp/feature_learning_nlp.html
+++ b/feature_learning_nlp/feature_learning_nlp.html
@@ -1415,7 +1415,7 @@ Example:</p>
 <section data-transition="linear" data-transition-speed="default">
 <h3>word2vec Basics</h3>
 <div class="slideContent" >
-<p>Intuition: solve fake task of predicting target word given words around it (*continuous bag of )</p>
+<p>Intuition: solve fake task of predicting target word given words around it (<em>continuous bag of words</em>)</p>
 
 <h2>Work flow</h2>
 
@@ -1463,7 +1463,7 @@ For the context \( \{w_i : i \neq t , t-k \leq i \leq t+k\} \), define \( h_t = 
 <li>\( t= 1 \): (every, character), (is, character)</li>
 <li>&hellip;</li>
 <li>\( t=5 \): (stereotype, or), (archetypal, or)</li>
-<li>\( T=6 \): (or, archetypal)</li>
+<li>\( t=6 \): (or, archetypal)</li>
 </ul>
 
 </div>
